  - readded manual ratings for movies/shows/episodes (by tknorris)
  - implemented manual ratings for seasons (by tknorris)
  - readded manual ratings for movies/shows/seasons/episodes
  - readded the Trakt contextmenu
  - multipart episodes now show a rating dialog for each episode, when playback is finished
  - updated transifex translations

version 3.0.0
  - new Trakt branded rating dialog (by Piers)
  - ported to Trakt.tv api v2 (using trakt.py by fuzeman)
  - added playback progress sync for movies
  - renamed everything from xbmc to kodi
  - more languages supported
  - send collected date from kodi to Trakt
  - send watched date from kodi to Trakt
  - send watched times and last watched date from Trakt to kodi
  - removed lists management and contextmenu (for now)
  - default rating is now a neutral 6 "Okay"
  - improved logging
  - various improvements and bugfixes
  
version 2.3.2
  - fixed update tags not running after sync, if the setting was enabled (nate1280)
  - fixed usage of sync after library update, was always syncing (nate1280)
  - small cleanup of sync, replace redundant calls with a variable and one time call (nate1280)
  - compatible with Gotham
  - language updates
  - other bug fixes (see github)

version 2.3.1
  - improved API error handling and debugging
  - new context menu action via RunScript(script.trakt,action=contextmenu)
  - silent option for manual sync via RunScript(script.trakt,action=sync,silent=True)

version 2.3.0
  - moved debug settings to their own menu (nate1280)
  - new togglewatched action for skins/keymaps (nate1280)
  - new rate action for skins/keymaps (nate1280)
  - new tagging/list actions for skins/keymaps (nate1280)
  - alternate rating notification style (nate1280)
  - exclusion checks now work in syncing and scrobbling (nate1280)

version 2.2.0
  - lots of code optimizing and bug fixes (nate1280)
  - sync fixes (nate1280)
  - better scrobbling of streaming media (nate1280)
  - updated translations
