@@ -5,6 +5,7 @@ version 3.0.1
   - readded manual ratings for movies/shows/seasons/episodes
   - readded the Trakt contextmenu
   - multipart episodes now show a rating dialog for each episode, when playback is finished
+  - use kodi proxy to send requests to trakt
   - updated transifex translations
 
 version 3.0.0
